// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnit /> by default matches with snapshot 1`] = `
<div
  className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 dxJhI"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 ilMIhk text-input-with-unit__StyledTextInput-gjmccx-1 dBtggV"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="text-input-with-unit__StyledInputUnit-gjmccx-2 icePLI"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with disabled prop matches with snapshot 1`] = `
<div
  className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 dxJhI"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 ilMIhk text-input-with-unit__StyledTextInput-gjmccx-1 dBtggV"
    disabled={true}
    name="text"
    type="number"
  />
  <span
    className="text-input-with-unit__StyledInputUnit-gjmccx-2 kfYxdE"
    disabled={true}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with error prop matches with snapshot 1`] = `
<div
  className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 dxJhI"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 qldNZ text-input-with-unit__StyledTextInput-gjmccx-1 dBtggV"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="text-input-with-unit__StyledInputUnit-gjmccx-2 asFKX"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with unit prop matches with snapshot 1`] = `
<div
  className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 dxJhI"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 ilMIhk text-input-with-unit__StyledTextInput-gjmccx-1 dBtggV"
    disabled={false}
    name="text"
    type="number"
  >
    €
  </input>
  <span
    className="text-input-with-unit__StyledInputUnit-gjmccx-2 icePLI"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with valid prop matches with snapshot 1`] = `
<div
  className="text-input-with-unit__StyledTextInputWithUnit-gjmccx-0 dxJhI"
>
  <input
    className="text-input__StyledInput-sc-11wej6v-1 LSiDR text-input-with-unit__StyledTextInput-gjmccx-1 dBtggV"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="text-input-with-unit__StyledInputUnit-gjmccx-2 dMkJBF"
    disabled={false}
  >
    λ
  </span>
</div>
`;
